--- a/src/styles.scss
+++ b/src/styles.scss
@@ -230,28 +230,28 @@ h3 {
 
 h1 {
     font-size: 85px !important;
-    line-height: 120% !important;
+    line-height: 130% !important;
 
 }
 
 h2 {
     font-size: 60px !important;
-    line-height: 115% !important;
+    line-height: 130% !important;
 }
 
 h3 {
     font-size: 40px !important;
-    line-height: 115% !important;
+    line-height: 130% !important;
 }
 
 h4 {
     font-size: 24px !important;
-    line-height: 115% !important;
+    line-height: 140% !important;
 }
 
 h5 {
     font-size: 18px !important;
-    line-height: 115% !important;
+    line-height: 140% !important;
     font-weight: bold !important;
     letter-spacing: 5.4px;
     padding-bottom: 16px;
@@ -745,6 +745,9 @@ top: 0px;
     gap: 60px 40px;
     padding: 0px 0px 0px 0px;
   }
+//   .content{
+//     width: 100%;
+//   }
 }
 
 @media screen and (max-width: 1200px){
@@ -1055,6 +1058,8 @@ padding: 0px 0px 0px 0px;
         transform: translate(-50%, -50%);
         text-align: center;
         color: var(--white-100);
+        width: 100%;
+    max-width: 1000px;
         
 
     }
